--- a/main.html
+++ b/main.html
@@ -33,8 +33,9 @@
                 <h2>Score</h2>
                 <p id="playerX">Player X: 0</p>
                 <p id="playerO">Player O: 0</p>
-            </div>
+            </div> 
             <p id="print"></p>
+            <button type="reset" id="reset" value="myfunc_2()">Reset</button>
         </div>
     </body>
 </html>
